# NU-PRISMM

./: .gitignore  LICENSE  MArsStepper.ino  README.md
catkin_ws/devel/: .catkin  local_setup.sh  setup.sh
catkin_ws/devel/lib/pkgconfig/: prismm_stream.pc
catkin_ws/devel/share/prismm_stream/cmake/: prismm_streamConfig.cmake
catkin_ws/src/arduino_libs/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/arduino_libs/libraries/: ACS712.cpp  ACS712_AC.cpp  AccelStepper.cpp  MultiStepper.cpp  PID_AutoTune_v0.cpp
catkin_ws/src/arduino_libs/libraries/headers/: ACS712.h  ACS712_AC.h  PID_AutoTune_v0.h
catkin_ws/src/dam_driver/: CMakeLists.txt  CMakeLists.txt.save  package.xml
catkin_ws/src/dam_driver/firmware/: CMakeLists.txt  Dam.cpp  Dam.h  dam_driver.cpp
catkin_ws/src/pas_driver/: CMakeLists.txt  package.xml
catkin_ws/src/pas_driver/firmware/: CMakeLists.txt  Pas.cpp  Pas.h  pas_driver.cpp
catkin_ws/src/prismm_gui/state_widget/: CMakeLists.txt  package.xml  plugin.xml  setup.py
catkin_ws/src/prismm_gui/state_widget/resource/: state_widget.ui
catkin_ws/src/prismm_gui/state_widget/scripts/: state_widget
catkin_ws/src/prismm_gui/state_widget/src/state_widget/: state_widget_module.py
catkin_ws/src/prismm_gui/stepper_widget/: CMakeLists.txt  package.xml  plugin.xml  setup.py
catkin_ws/src/prismm_gui/stepper_widget/resource/: stepper_widget.ui
catkin_ws/src/prismm_gui/stepper_widget/scripts/: stepper_widget
catkin_ws/src/prismm_gui/stepper_widget/src/stepper_widget/: stepper_widget_module.py
catkin_ws/src/prismm_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/prismm_msgs/msg/: dam_data.msg  pas_data.msg
catkin_ws/src/prismm_startup/: CMakeLists.txt  package.xml
catkin_ws/src/prismm_startup/scripts/: utilities.sh
catkin_ws/src/prismm_stream/: CMakeLists.txt
catkin_ws/src/prismm_stream/launch/: .stream.launch.swp  stream.launch  usb_cam_stream.launch
catkin_ws/src/sense_driver/: CMakeLists.txt  package.xml
catkin_ws/src/sense_driver/firmware/: CMakeLists.txt  Sense.h
playground/: README.md
playground/load_sensor/: HX711.cpp  HX711.h  load_sensor.ino
playground/mega_3/: mega_3.ino
playground/multi_stepper/: AccelStepper.cpp  AccelStepper.h  MultiStepper.cpp  multi_stepper.ino
playground/rpm_hall/: rpm_hall.ino
playground/stepper_current_sense/: ACS712.cpp  stepper_current_sense.ino
playground/stepper_ros/: stepper_ros.ino
playground/thermistor/: Thermistor.cpp  thermistor.ino
playground/thermocouple/: thermocouple.ino
rpi_setup/: README.md
scripts/: arduino_libs.sh  bag_to_csv.py  bagtest.bag  datatest.bag
